Name:			Portage
Version:		0.1
License:		GPL
Author:			Andres Loeh
Build-Depends:		base, parsec, unix
Synopsis:		Reimplementation of Gentoo Portage functions
Exposed-Modules:	Portage.Config,
			Portage.Constants,
			Portage.Dependency,
			Portage.Ebuild,
			Portage.Eclass,
			Portage.Keyword,
			Portage.Mask,
			Portage.Match,
			Portage.Package,
			Portage.Profile,
			Portage.Shell,
			Portage.Tree,
			Portage.Use,
			Portage.UseDefaults,
			Portage.Utilities,
			Portage.Version
