Name:			Portage
Version:		0.1
License:		GPL
Author:			Andres Loeh
Build-Depends:		base, parsec, unix, mtl, fgl>=5.2
Synopsis:		Reimplementation of Gentoo Portage functions
Exposed-Modules:	Portage.Config,
			Portage.Constants,
			Portage.Dependency,
			Portage.Ebuild,
			Portage.Eclass,
			Portage.Graph,
			Portage.GraphGeneration,
			Portage.GraphUtils,
			Portage.Keyword,
			Portage.Mask,
			Portage.Match,
			Portage.Package,
			Portage.PackageKeywords,
			Portage.PackageProvided,
			Portage.PackageUse,
			Portage.Profile,
			Portage.Shell,
			Portage.Strategy,
			Portage.Tree,
			Portage.Use,
			Portage.UseDefaults,
			Portage.Utilities,
			Portage.Version

Executable:		exi
Main-Is:		Main.hs
