Name:			portage
Version:		0.1
License:		GPL
Author:			Andres Loeh
Build-Depends:		base, parsec, unix, mtl, fgl>=5.2
Ghc-Options:		-O
Synopsis:		Reimplementation of Gentoo Portage functions
Exposed-Modules:	Portage.AnsiColor,
			Portage.Tree.Type,
			Portage.Profile,
			Portage.Ebuild.Type,
			Portage.PortageConfig,
			Portage.UseMask,
			Portage.PackageProvided,
			Portage.PackageUse,
			Portage.GraphGeneration,
			Portage.Match,
			Portage.NewUse,
			Portage.Info,
			Portage.World,
			Portage.Strategy,
			Portage.Use,
			Portage.Ebuild,
			Portage.ProgramVersion,
			Portage.Virtual,
			Portage.Eclass,
			Portage.Dependency,
			Portage.Mask,
			Portage.Shell,
			Portage.PackageKeywords,
			Portage.Utilities,
			Portage.Package,
			Portage.PortageConfig.Type,
			Portage.Merge,
			Portage.Interface,
			Portage.GraphUtils,
			Portage.Version,
			Portage.Graph,
			Portage.Config,
			Portage.Keyword,
			Portage.Tree,
			Portage.UseDefaults,
			Portage.Constants,
			Portage.Cache
Executable:		exi
Main-Is:		Main.hs
Ghc-Options:		-O
